--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,5 @@
-<div class="container index">
+<div class="index">
+    <div class="container">
     <div class="row">
         <div class="col-md-3">
 
@@ -24,4 +25,5 @@
         <div class="col-md-3"></div>
 
     </div>
+</div>
 </div>
