--- a/views/productDetail.hbs
+++ b/views/productDetail.hbs
@@ -1,23 +1,27 @@
 <nav class="navbar navbar-expand-sm navbar-dark fixed-top">
     <!-- Brand/logo -->
-    <a class="navbar-brand" href="#">
-        <img src="images/logo-footer.png" alt="logo" style="width:90%;">
+    <a class="navbar-brand" href="/trangchu">
+        <img src="./images/logo-footer.png" alt="logo" style="width:90%;">
     </a>
 
     <!-- Links -->
     <ul class="navbar-nav">
         <li class="nav-item">
-            <a class="nav-link" href="#"> <span class="fas fa-calendar"></span> Lịch hẹn</a>
+            <a class="nav-link" href="/lichhen"> <span class="fas fa-calendar"></span> Lịch hẹn</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#"><span class="fas fa-id-card"></span> Khách hàng</a>
+            <a class="nav-link" href="/khachhang"><span class="fas fa-id-card"></span> Khách hàng</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#"><span class="fas fa-donate"></span> Thống kê</a>
+            <a class="nav-link" href="/thongke"><span class="fas fa-donate"></span> Thống kê</a>
         </li>
 
-        <li class="nav-item active">
-            <a class="nav-link" href="#"><span class="fas fa-folder-open"></span> Quản lý tóc</a>
+        <li class="nav-item">
+            <a class="nav-link" href="/toc"><span class="fas fa-folder-open"></span> Quản lý tóc</a>
+        </li>
+
+        <li class="nav-item">
+            <a class="nav-link" href="/products"><span class="fas fa-paperclip"></span> Quản lý sản phẩm</a>
         </li>
 
         <li class="nav-item">
@@ -28,38 +32,41 @@
 
 </nav>
 
-<div class="container-fluid mt-5 pt-5 productDetail">
-    <h1 class="text-light text-center pt-5 pb-5">Products Details</h1>
-    <div class="row">
-        <div class="col-md-2">
+<div class="productdetails">
+    <div class="container-fluid mt-5 pt-5 productDetail">
+        <h1 class="text-light text-center pt-5 pb-5">Products Details</h1>
+        <div class="row">
+            <div class="col-md-2">
+
+            </div>
+
+            <div class="col-md-8">
+                <form action="/action_page.php" class="p-4 productsdetails-form">
+                    <div class="form-group">
+                        <label class="text-light" for="idtoc">Product name:</label>
+                        <input value="{{product.name}}" type="text" class="form-control" id="idtoc" placeholder="DHELS">
+                    </div>
+                    <div class="form-group">
+                        <label class="text-light" for="kieutoc">Product cost :</label>
+                        <input type="text" class="form-control" value="{{product.cost}}" id="kieutoc">
+                    </div>
+
+                    <div class="form-group">
+                        <label class="text-light" for="fileanh">Product date:</label>
+                        <input value="{{product.date}}" type="date" class="form-control" id="fileanh">
+                    </div>
+
+                    <div class="form-group">
+                        <label class="text-light" for="gioitinh">Products brand: </label>
+                        <input value="{{product.brand}}" type="text" class="form-control" id="gioitinh">
+                    </div>
+                    <button type="submit" class="btn btn-primary btn-productdetails">Tạo</button>
+                </form>
+            </div>
+
+            <div class="col-md-2"></div>
 
         </div>
-
-        <div class="col-md-8">
-            <form action="/action_page.php" class="p-4">
-            <div class="form-group">
-              <label for="idtoc">Product name:</label>
-              <input value="{{product.name}}" type="text" class="form-control" id="idtoc" placeholder="DHELS">
-            </div>
-            <div class="form-group">
-              <label for="kieutoc">Product cost :</label>
-              <input type="text" class="form-control" value="{{product.cost}}" id="kieutoc">
-            </div>
-
-            <div class="form-group custom-file mb-3">
-              <label for="fileanh">Product date:</label>
-            <input value="{{product.date}}" type="date" class="form-control" id="fileanh">
-            </div>
-
-            <div class="form-group">
-              <label for="gioitinh">Products brand: </label>
-               <input value="{{product.brand}}" type="text" class="form-control" id="gioitinh">
-            </div>
-            <button type="submit" class="btn btn-primary">Tạo</button>
-          </form>
-        </div>
-
-        <div class="col-md-2"></div>
-
     </div>
 </div>
+
