--- a/views/productDetail.hbs
+++ b/views/productDetail.hbs
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-sm navbar-dark fixed-top">
     <!-- Brand/logo -->
     <a class="navbar-brand" href="/trangchu">
-        <img src="./images/logo-footer.png" alt="logo" style="width:90%;">
+        <img src="/images/logo-footer.png" alt="logo" style="width:90%;">
     </a>
 
     <!-- Links -->
