--- a/views/productDetail.hbs
+++ b/views/productDetail.hbs
@@ -41,26 +41,36 @@
             </div>
 
             <div class="col-md-8">
-                <form action="/action_page.php" class="p-4 productsdetails-form">
-                    <div class="form-group">
-                        <label class="text-light" for="idtoc">Product name:</label>
-                        <input value="{{product.name}}" type="text" class="form-control" id="idtoc" placeholder="DHELS">
+                <form action="/products/update/{{product.id}}" method="POST" class="p-4 productsdetails-form">
+                     <div class="form-group">
+                        <label class="text-light" for="idtoc">Product ID:</label>
+                        <input name="name" value="{{product.name}}" type="text" class="form-control" id="idtoc" placeholder="DHELS">
                     </div>
                     <div class="form-group">
                         <label class="text-light" for="kieutoc">Product cost :</label>
-                        <input type="text" class="form-control" value="{{product.cost}}" id="kieutoc">
+                        <input type="text" name="cost" class="form-control" value="{{product.cost}}" id="kieutoc">
                     </div>
 
                     <div class="form-group">
                         <label class="text-light" for="fileanh">Product date:</label>
-                        <input value="{{product.date}}" type="date" class="form-control" id="fileanh">
+                        <input value="{{product.date}}" name="date" type="date" class="form-control" id="fileanh">
                     </div>
 
                     <div class="form-group">
-                        <label class="text-light" for="gioitinh">Products brand: </label>
-                        <input value="{{product.brand}}" type="text" class="form-control" id="gioitinh">
+                        <label for="brand" class="text-light">Product brand</label>
+                        <select class="form-control" name="brand" style="padding:0 0.75rem" id="brand">
+                            {{#each brand}}
+                                {{#if (sosanh this.id ../product.brand)}}
+                                    <option selected value="{{this.id}}">{{this.name}}</option>
+                                {{else}}
+                                    <option value="{{this.id}}">{{this.name}}</option>
+                                {{/if}}
+                            {{/each}}
+                        </select>
                     </div>
-                    <button type="submit" class="btn btn-primary btn-productdetails">Tạo</button>
+
+                
+                    <button type="submit" class="btn btn-primary btn-productdetails">Sửa</button>
                 </form>
             </div>
 
