--- a/views/products.hbs
+++ b/views/products.hbs
@@ -37,14 +37,16 @@
     <div class="container">
       <h1 class="text-light text-center pt-5 pb-5">QUẢN LÝ SẢN PHẨM</h1>
 
+{{!-- TAO --}}
       <div class="row">
         <div class="col-md-3"></div>
+
         <div class="col-md-6 creat-form">
-          <form action="/action_page.php" class="p-4">
+          <form action="/products/insert" method="POST" class="p-4">
             <h4 class="text-light display-4 mb-3"><small>Tạo mới sản phẩm</small></h4>
             <div class="form-group">
               <label for="namesp">Tên sản phẩm: </label>
-              <input name="name" type="text" class="form-control" placeholder="Enter tên sản phẩm" id="namesp">
+              <input name="name" id="name" onchange="validateName()" type="text" class="form-control" placeholder="Enter tên sản phẩm" id="namesp">
             </div>
             <div class="form-group">
               <label for="costsp">Giá sản phẩm:</label>
@@ -53,7 +55,7 @@
 
             <div class="form-group">
               <label for="datesp">Ngày nhập: </label>
-              <input name="date" class=" form-control" type="date" id="datesp">
+              <input id="date" onchange="validateDate()" name="date" class=" form-control" type="date" id="datesp">
             </div>
 
             <div class="form-group">
@@ -64,17 +66,26 @@
                 {{/each}}
               </select>
             </div>
-            <button type="submit" class="btn btn-primary btntoc">Tạo</button>
+
+            <div class="form-group">
+              <label for="imgsp">Chọn ảnh: </label>
+              <img width="170px" height="170px" id="imgsrc">
+              <input type="hidden" name="img">
+              <input type="file" id="img" onchange="onchangeImg()" class="form-control-file border text-light" >
+            </div>
+            <button type="submit" disabled id="btn-submit" class="btn btn-primary btntoc">Tạo</button>
           </form>
         </div>
+
         <div class="col-md-3"></div>
       </div>
     </div>
     
-    <div class="row">
-        <div class="col-md-2">
 
-        </div>
+
+{{!-- XEM --}}
+    <div class="row">
+        <div class="col-md-2"></div>
 
         <div class="col-md-8">
             <table class="table table-dark table-striped table-hover">
@@ -86,6 +97,7 @@
                         <th>cost</th>
                         <th>date</th>
                         <th>brand</th>
+                        <th>img</th>
                         <th>Option</th>
                     </tr>
                 </thead>
@@ -97,9 +109,10 @@
                         <td>{{this.cost}}</td>
                         <td class="center">{{formatDate this.date}}</td>
                         <td>{{getBrandName this.brand ../brand}}</td>
+                        <td class="center"><img src="{{this.img}}"></td>
                         <td>
-                            <button class="btn btn-link text-light" onclick="onEdit({{this.id}})" >Edit</button>
-                            <button class="btn btn-link text-light" onclick="onDelete({{this.id}})" >Delete</button>
+                            <button class="btn btn-link text-light" onclick="onEdit('{{this.id}}')" >Edit</button>
+                            <button class="btn btn-link text-light" onclick="onDelete('{{this.id}}')" >Delete</button>
                         </td>
                     </tr>
                     {{/each}}
@@ -154,4 +167,91 @@
     const onEdit = id => {
         window.location.href="/products/edit/"+ id;
     }
+</script>
+
+<script>
+//Lay hinh anh
+
+ const onchangeImg() =>{
+    var file = document.getElementById('img').files[0];
+    var imgsrc = document.getElementById('imgsrc');
+    var reader = new FileReader();
+    reader.onload = (e) =>{
+      imgsrc.src = e.target.result;
+    }
+   reader.readAsDataURL(file)
+ }
+
+  const uploadImg = (input) =>{
+    //chuyen thanh base 64
+
+
+    //upload sever
+      const url = 'http://localhost:3000/products/delete/'+id;
+        const option = {
+            method: 'delete',
+            header: {
+                'Content-Type': 'application/json'
+            }
+        }
+        try
+        {
+            await fetchAPI(url, option);
+            window.location.href="/products";
+        }
+        catch(e)
+        {
+            console.log('Delete err: ',e)
+        }
+  }
+
+
+
+  let isNameValid = isDate = false;
+  const validateName = () =>{
+    let val = document.getElementById('name').value;
+    if(!val || val.trim().length==0 || val.trim().length > 100)
+    {
+        alert("Name isvalid");
+        isNameValid = false;
+    }
+    else 
+    {
+      isNameValid = true;
+    }
+    validateForm();
+  }
+
+  const validateDate = () =>{
+    let val = document.getElementById('date').value;
+    let _date = new Date(val);
+
+    let _today = new Date();
+    _today.setHours(0,0,0,0);
+
+    if(!val || _date> _today)
+    {
+        alert("Date isvalid");
+        isDate = false;
+    }
+    else 
+    {
+      isDate = true;
+    }
+
+    validateForm();
+  }
+
+  const validateForm = () =>{
+    if(!isNameValid || !isDate)
+    {
+      document.getElementById('btn-submit').disabled = true;
+    }
+    else 
+    {
+      document.getElementById('btn-submit').disabled = false;
+    }
+  }
+
+
 </script>
