--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -25,6 +25,8 @@
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <link rel="stylesheet" href="/stylesheets/style.css">
+
+   <script src="https://www.gstatic.com/firebasejs/8.8.0/firebase-app.js"></script>
   </head>
   <body>
     {{{body}}}
