--- a/views/productDetail.hbs
+++ b/views/productDetail.hbs
@@ -41,10 +41,11 @@
             </div>
 
             <div class="col-md-8">
-                <form action="/products/update/{{product.id}}" method="POST" class="p-4 productsdetails-form">
-                     <div class="form-group">
+                <form enctype="multipart/form-data" action="/products/update/{{product.id}}" method="POST" class="p-4 productsdetails-form">
+                    <div class="form-group">
                         <label class="text-light" for="idtoc">Product ID:</label>
-                        <input name="name" value="{{product.name}}" type="text" class="form-control" id="idtoc" placeholder="DHELS">
+                        <input name="name" value="{{product.name}}" type="text" class="form-control" id="idtoc"
+                            placeholder="DHELS">
                     </div>
                     <div class="form-group">
                         <label class="text-light" for="kieutoc">Product cost :</label>
@@ -60,16 +61,23 @@
                         <label for="brand" class="text-light">Product brand</label>
                         <select class="form-control" name="brand" style="padding:0 0.75rem" id="brand">
                             {{#each brand}}
-                                {{#if (sosanh this.id ../product.brand)}}
-                                    <option selected value="{{this.id}}">{{this.name}}</option>
-                                {{else}}
-                                    <option value="{{this.id}}">{{this.name}}</option>
-                                {{/if}}
+                            {{#if (sosanh this.id ../product.brand)}}
+                            <option selected value="{{this.id}}">{{this.name}}</option>
+                            {{else}}
+                            <option value="{{this.id}}">{{this.name}}</option>
+                            {{/if}}
                             {{/each}}
                         </select>
                     </div>
 
-                
+                    <div class="form-group">
+                        <label for="imgsp" class="text-light">Chọn ảnh: </label>
+                        <img width="170px" height="170px" src="{{product.img}}" id="imgsrc">
+                        <input type="file" name="img" id="img" value="{{product.img}}" onchange="onchangeImg()"
+                            class="form-control-file border text-light">
+                    </div>
+
+
                     <button type="submit" class="btn btn-primary btn-productdetails">Sửa</button>
                 </form>
             </div>
@@ -80,3 +88,17 @@
     </div>
 </div>
 
+<script>
+     const onchangeImg = () => {
+    var file = document.getElementById('img').files[0];
+    var imgsrc = document.getElementById('imgsrc');
+    var imgadd = document.getElementById('imgadd');
+    var reader = new FileReader();
+    reader.onload= (e) =>{
+      imgsrc.src = e.target.result;
+    }
+    reader.readAsDataURL(file);
+
+
+  }
+</script>
