--- a/views/productDetail.hbs
+++ b/views/productDetail.hbs
@@ -43,18 +43,18 @@
             <div class="col-md-8">
                 <form enctype="multipart/form-data" action="/products/update/{{product.id}}" method="POST" class="p-4 productsdetails-form">
                     <div class="form-group">
-                        <label class="text-light" for="idtoc">Product ID:</label>
-                        <input name="name" value="{{product.name}}" type="text" class="form-control" id="idtoc"
+                        <label class="text-light" for="name">Product Name:</label>
+                        <input name="name" value="{{product.name}}" type="text" class="form-control" id="name"
                             placeholder="DHELS">
                     </div>
                     <div class="form-group">
-                        <label class="text-light" for="kieutoc">Product cost :</label>
-                        <input type="text" name="cost" class="form-control" value="{{product.cost}}" id="kieutoc">
+                        <label class="text-light" for="cost">Product cost :</label>
+                        <input type="text" name="cost" class="form-control" value="{{product.cost}}" id="cost">
                     </div>
 
                     <div class="form-group">
-                        <label class="text-light" for="fileanh">Product date:</label>
-                        <input value="{{product.date}}" name="date" type="date" class="form-control" id="fileanh">
+                        <label class="text-light" for="date">Product date:</label>
+                        <input value="{{product.date}}" name="date" type="date" class="form-control" id="date">
                     </div>
 
                     <div class="form-group">
@@ -71,7 +71,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="imgsp" class="text-light">Chọn ảnh: </label>
+                        <label for="img" class="text-light">Chọn ảnh: </label>
                         <img width="170px" height="170px" src="{{product.img}}" id="imgsrc">
                         <input type="file" name="img" id="img" value="{{product.img}}" onchange="onchangeImg()"
                             class="form-control-file border text-light">
@@ -101,4 +101,70 @@
 
 
   }
+</script>
+
+<script>
+  //Validate name
+  let isNameValid = isDate = isCostValid = false;
+  const validateName = () => {
+    let val = document.getElementById('name').value;
+    if (!val || val.trim().length == 0 || val.trim().length > 100) {
+      alert("Name isvalid");
+      isNameValid = false;
+    }
+    else {
+      isNameValid = true;
+    }
+    validateForm();
+  }
+
+  //Validate cost
+  const validateCost = () => {
+    var val,
+      element = document.getElementById('cost');
+    if (element != null) {
+      val = element.value;
+    }
+    else {
+      val = null;
+    }
+    if (!val || val.trim().length == 0 || val.trim() <= 0) {
+      alert("Cost isvalid");
+      isCostValid = false;
+    }
+    else {
+      isCostValid = true;
+    }
+    validateForm();
+  }
+
+  //Validate day
+  const validateDate = () => {
+    let val = document.getElementById('date').value;
+    let _date = new Date(val);
+
+    let _today = new Date();
+    _today.setHours(0, 0, 0, 0);
+
+    if (!val || _date > _today) {
+      alert("Date isvalid");
+      isDate = false;
+    }
+    else {
+      isDate = true;
+    }
+
+    validateForm();
+  }
+
+  const validateForm = () => {
+    if (!isNameValid || !isDate || !isCostValid) {
+      document.getElementById('btn-submit').disabled = true;
+    }
+    else {
+      document.getElementById('btn-submit').disabled = false;
+    }
+  }
+
+
 </script>
