--- a/views/products.hbs
+++ b/views/products.hbs
@@ -46,36 +46,36 @@
             <h4 class="text-light display-4 mb-3"><small>Tạo mới sản phẩm</small></h4>
             <div class="form-group">
               <label for="namesp">Tên sản phẩm: </label>
-              <input name="name" id="name" onchange="validateName()" type="text" class="form-control"
+              <input name="name" id="name" onchange="" type="text" class="form-control"
                 placeholder="Enter tên sản phẩm" id="namesp">
             </div>
             <div class="form-group">
-              <label for="costsp">Giá sản phẩm:</label>
-              <input name="cost" value="0" id="cost" type="number" onchange="validateCost()" class="form-control"
+              <label for="price">Giá sản phẩm:</label>
+              <input name="price" value="0" id="price" type="number" onchange="" class="form-control"
                 placeholder="Enter giá sản phẩm">
             </div>
 
             <div class="form-group">
-              <label for="datesp">Ngày nhập: </label>
-              <input id="date" onchange="validateDate()" name="date" class=" form-control" type="date" id="datesp">
+              <label for="des">Ngày nhập: </label>
+              <input id="des" onchange="" name="des" class=" form-control" type="text">
             </div>
 
             <div class="form-group">
               <label for="brandsp">Nhãn hàng: </label>
               <select name="brand" class="form-control" style="padding:0 0.75rem">
                 {{#each brand}}
-                <option value="{{this.id}}">{{this.name}}</option>
+                <option value="{{this._id}}">{{this.name}}</option>
                 {{/each}}
               </select>
             </div>
 
             <div class="form-group">
               <label for="imgsp">Chọn ảnh: </label>
-              <img width="170px" height="170px" id="imgsrc">
+              <img width="170px" height="170px" class="d-none" id="imgsrc">
               <input type="hidden" name="img" id="imgadd">
               <input type="file" id="img" onchange="onchangeImg()" class="form-control-file border text-light">
             </div>
-            <button type="submit" disabled id="btn-submit" class="btn btn-primary btntoc">Tạo</button>
+            <button type="submit" id="btn-submit" class="btn btn-primary btntoc">Tạo</button>
           </form>
         </div>
 
@@ -191,6 +191,7 @@
     var reader = new FileReader();
     reader.onload= (e) =>{
       imgsrc.src = e.target.result;
+      imgsrc.classList.remove('d-none'); 
     }
     reader.readAsDataURL(file);
 
@@ -278,7 +279,7 @@
 
   const validateForm = () => {
     if (!isNameValid || !isDate || !isCostValid) {
-      document.getElementById('btn-submit').disabled = true;
+      document.getElementById('btn-submit').disabled = false;
     }
     else {
       document.getElementById('btn-submit').disabled = false;
